[gd_scene load_steps=97 format=3 uid="uid://cgr1ebmkjf3tx"]

[ext_resource type="Script" path="res://scripts/tiles/enemy_tile.gd" id="1_pfxte"]
[ext_resource type="Texture2D" uid="uid://tiqttja3wc6v" path="res://assets/Enemies/Bat/Bat_attack.png" id="2_g1clr"]
[ext_resource type="Texture2D" uid="uid://cybv054u7m37y" path="res://assets/Enemies/Bat/Bat_idle.png" id="3_1r3xe"]
[ext_resource type="Texture2D" uid="uid://c8p1sb486l7nv" path="res://assets/Enemies/Bat/Bat_die.png" id="3_aqogn"]
[ext_resource type="Texture2D" uid="uid://ncdxmxenpb24" path="res://assets/Enemies/Skeleton/Skeleton_attack.png" id="4_4253f"]
[ext_resource type="Texture2D" uid="uid://b5j3crweltm2g" path="res://assets/Enemies/Skeleton/Skeleton_idle.png" id="5_8tdvr"]
[ext_resource type="Texture2D" uid="uid://cfspk84h3cshm" path="res://assets/Enemies/Demon/ATTACK.png" id="5_hp2ug"]
[ext_resource type="Texture2D" uid="uid://dv5aswne58625" path="res://assets/Enemies/Demon/IDLE.png" id="6_61vib"]
[ext_resource type="Texture2D" uid="uid://db1sd2q0lhvq2" path="res://assets/Enemies/Demon/DEATH.png" id="8_0635f"]
[ext_resource type="Texture2D" uid="uid://dx2pesgdaksln" path="res://assets/Enemies/Wolf/Massacre Sprite Sheet.png" id="10_d6v0j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yrvdx"]
atlas = ExtResource("2_g1clr")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjrca"]
atlas = ExtResource("2_g1clr")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr8bh"]
atlas = ExtResource("2_g1clr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyf1i"]
atlas = ExtResource("2_g1clr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtwdi"]
atlas = ExtResource("2_g1clr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r6c5"]
atlas = ExtResource("2_g1clr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbal4"]
atlas = ExtResource("2_g1clr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnwmb"]
atlas = ExtResource("2_g1clr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_22dix"]
atlas = ExtResource("3_aqogn")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecnsn"]
atlas = ExtResource("3_aqogn")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yppd"]
atlas = ExtResource("3_aqogn")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve8xp"]
atlas = ExtResource("3_aqogn")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhjwr"]
atlas = ExtResource("3_aqogn")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss31c"]
atlas = ExtResource("3_aqogn")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiixp"]
atlas = ExtResource("3_aqogn")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_56lxn"]
atlas = ExtResource("3_aqogn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t0gk"]
atlas = ExtResource("3_aqogn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqhkl"]
atlas = ExtResource("3_aqogn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc2t1"]
atlas = ExtResource("3_aqogn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sytif"]
atlas = ExtResource("3_1r3xe")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_too76"]
atlas = ExtResource("3_1r3xe")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hgmp"]
atlas = ExtResource("3_1r3xe")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwp3n"]
atlas = ExtResource("3_1r3xe")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocntv"]
atlas = ExtResource("3_1r3xe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgma2"]
atlas = ExtResource("3_1r3xe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhulp"]
atlas = ExtResource("3_1r3xe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rp1h"]
atlas = ExtResource("3_1r3xe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fw4x2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrvdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjrca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr8bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyf1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtwdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r6c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbal4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnwmb")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_22dix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecnsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yppd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve8xp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhjwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss31c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiixp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56lxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t0gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqhkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc2t1")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sytif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_too76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hgmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwp3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocntv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgma2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhulp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rp1h")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_20nus"]
atlas = ExtResource("4_4253f")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qys63"]
atlas = ExtResource("4_4253f")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_thguu"]
atlas = ExtResource("4_4253f")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuxf8"]
atlas = ExtResource("4_4253f")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg7bs"]
atlas = ExtResource("4_4253f")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd8t1"]
atlas = ExtResource("4_4253f")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwii8"]
atlas = ExtResource("4_4253f")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2t46"]
atlas = ExtResource("4_4253f")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xm3u"]
atlas = ExtResource("4_4253f")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bblx"]
atlas = ExtResource("4_4253f")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0aipc"]
atlas = ExtResource("4_4253f")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbeo7"]
atlas = ExtResource("4_4253f")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2qaf"]
atlas = ExtResource("4_4253f")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3ng2"]
atlas = ExtResource("5_8tdvr")
region = Rect2(164, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa14r"]
atlas = ExtResource("5_8tdvr")
region = Rect2(123, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xymp"]
atlas = ExtResource("5_8tdvr")
region = Rect2(82, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_61vwd"]
atlas = ExtResource("5_8tdvr")
region = Rect2(41, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxssj"]
atlas = ExtResource("5_8tdvr")
region = Rect2(0, 0, 41, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_bisyc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_20nus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qys63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thguu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuxf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg7bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd8t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwii8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2t46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xm3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bblx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0aipc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbeo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2qaf")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3ng2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa14r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xymp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61vwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxssj")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bba5w"]
atlas = ExtResource("5_hp2ug")
region = Rect2(0, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_athbj"]
atlas = ExtResource("5_hp2ug")
region = Rect2(81, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgck7"]
atlas = ExtResource("5_hp2ug")
region = Rect2(162, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw700"]
atlas = ExtResource("5_hp2ug")
region = Rect2(243, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpuqq"]
atlas = ExtResource("5_hp2ug")
region = Rect2(324, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxeyp"]
atlas = ExtResource("5_hp2ug")
region = Rect2(405, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8qb7"]
atlas = ExtResource("5_hp2ug")
region = Rect2(486, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y22w"]
atlas = ExtResource("5_hp2ug")
region = Rect2(567, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_50ah8"]
atlas = ExtResource("8_0635f")
region = Rect2(0, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfnjj"]
atlas = ExtResource("8_0635f")
region = Rect2(81, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_yivj2"]
atlas = ExtResource("8_0635f")
region = Rect2(162, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa4yd"]
atlas = ExtResource("8_0635f")
region = Rect2(243, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xald"]
atlas = ExtResource("8_0635f")
region = Rect2(324, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvoou"]
atlas = ExtResource("8_0635f")
region = Rect2(405, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydmnc"]
atlas = ExtResource("6_61vib")
region = Rect2(0, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_hagcs"]
atlas = ExtResource("6_61vib")
region = Rect2(81, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xk4l"]
atlas = ExtResource("6_61vib")
region = Rect2(162, 0, 81, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjc46"]
atlas = ExtResource("6_61vib")
region = Rect2(243, 0, 81, 71)

[sub_resource type="SpriteFrames" id="SpriteFrames_2demk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bba5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_athbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgck7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw700")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpuqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxeyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8qb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y22w")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_50ah8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfnjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yivj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa4yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xald")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvoou")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydmnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hagcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xk4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjc46")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3uxhb"]
atlas = ExtResource("10_d6v0j")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwut"]
atlas = ExtResource("10_d6v0j")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuqhv"]
atlas = ExtResource("10_d6v0j")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q83bj"]
atlas = ExtResource("10_d6v0j")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhswr"]
atlas = ExtResource("10_d6v0j")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_243oc"]
atlas = ExtResource("10_d6v0j")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qbqe"]
atlas = ExtResource("10_d6v0j")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfav1"]
atlas = ExtResource("10_d6v0j")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr0yd"]
atlas = ExtResource("10_d6v0j")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqxs5"]
atlas = ExtResource("10_d6v0j")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7528t"]
atlas = ExtResource("10_d6v0j")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ij4"]
atlas = ExtResource("10_d6v0j")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kko1g"]
atlas = ExtResource("10_d6v0j")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6hjj"]
atlas = ExtResource("10_d6v0j")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtowk"]
atlas = ExtResource("10_d6v0j")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q8u6"]
atlas = ExtResource("10_d6v0j")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yap7n"]
atlas = ExtResource("10_d6v0j")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7utot"]
atlas = ExtResource("10_d6v0j")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3a4sl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uxhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuqhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q83bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhswr")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_243oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qbqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfav1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr0yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqxs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7528t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ij4")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kko1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6hjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtowk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q8u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yap7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7utot")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jiy2"]

[node name="enemy_tile" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_pfxte")

[node name="enemy_01" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_fw4x2")
animation = &"idle"
autoplay = "idle"

[node name="enemy_02" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
texture_filter = 1
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_bisyc")
animation = &"attack"
autoplay = "idle"

[node name="enemy_03" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_2demk")
animation = &"idle"
autoplay = "idle"

[node name="enemy_04" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -5)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_3a4sl")
animation = &"idle"
autoplay = "idle"

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1jiy2")

[node name="raycast" type="RayCast2D" parent="."]

[node name="damage_numbers_origin" type="Node2D" parent="."]
position = Vector2(0, -11)
